# xbow-validation-benchmarks-statistics

./: .gitignore  .pre-commit-config.yaml  README.md  benchmarks.json  main.py  pyproject.toml
xbow_validation_benchmarks_statistics/cli/: app.py  collect.py
xbow_validation_benchmarks_statistics/dashboard/: app.py
