[project]
name = "xbow-validation-benchmarks-statistics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitpython>=3.1.45",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pydantic>=2.12.5",
    "seaborn>=0.13.2",
    "streamlit>=1.51.0",
    "structlog>=25.5.0",
    "tencent-cloud-hackathon-intelligent-pentest-competition-api-server>=0.1.17",
    "tqdm>=4.67.1",
    "typer>=0.20.0",
]
